--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
                 </executions>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>org.academiadecodigo.javabank.App</mainClass>
@@ -52,6 +51,17 @@
             <groupId>org.academiadecodigo.bootcamp</groupId>
             <artifactId>prompt-view</artifactId>
             <version>0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.10.0</version>
         </dependency>
     </dependencies>
 
